<resources>
    <string name="app_name">My Calendar</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="remind">Remind:</string>
    <string name="do_not_remind">Do not remind</string>
    <string name="in_10_minutes">In 10 minutes</string>
    <string name="in_30_minutes">in 30 minutes</string>
    <string name="in_1_hour">In 1 hour</string>
    <string name="new_event">New event</string>
    <string name="close">close</string>
    <string name="all_day">All day</string>
    <string name="remind_in_10_minutes">Remind in 10 minutes</string>
    <string name="remind_in_30_minutes">Remind in 30 minutes</string>
    <string name="remind_in_1_hour">Remind in 1 hour</string>
    <string name="delete_event">Delete event</string>
    <string name="delete">Do you want to delete this event?</string>
    <string name="share">Do you want to share this event?</string>
    <string name="example_time">12:30</string>
    <string name="example_remind">Remind in 1 hour</string>
</resources>
