<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_10">

    <TextView
        android:id="@+id/item_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        tools:text="@string/event" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_time"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_12"
            tools:text="@string/example_time" />

        <TextView
            android:id="@+id/item_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_10"
            android:textSize="@dimen/text_12"
            tools:text="@string/example_remind" />

    </LinearLayout>

</LinearLayout>